--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
 </p>
 
 <p>
-	For now, I am a second-year Ph.D. student at USC, working with <b>Prof. <a href="https://viterbi.usc.edu/directory/faculty/Kuo/Chung-Chieh">C.-C. Jay Kuo</a></b>.  I am a recipient of the <b><a href="https://graduateschool.usc.edu/fellowships/">Viterbi Fellowship</a></b>. My research here lie broadly in representation learning and machine learning. 
-Specifically, I want to design simple and efficient algorithms and apply them to real-world applications.
+	For now, I am a second-year Ph.D. student at USC, working with <b>Prof. <a href="https://viterbi.usc.edu/directory/faculty/Kuo/Chung-Chieh">C.-C. Jay Kuo</a></b>.  I am a recipient of the <b><a href="https://graduateschool.usc.edu/fellowships/">Viterbi Fellowship</a></b>. My research here lie broadly in representation learning, generative AI and foundation models. 
+Specifically, I want to design simple and efficient learning algorithms and apply them to real-world applications.
 <p>
 	In the past, I worked on computer vision, deep learning and medical image analysis. I am very fortunate to had opportunities to collaborate with <b>Prof. <a href="https://www.cse.cuhk.edu.hk/~qdou/">Qi Dou</a> </b>, <b>Dr. <a href="https://www.zongweiz.com/">Zongwei Zhou</a></b>, <b>Prof. <a href="https://www.cs.jhu.edu/~ayuille/">Alan Yuille</a></b>, and <b>Prof.<a href="https://xwcv.github.io/"> Xinggang Wang</a></b>. They are really nice people and I enjoy the time working with them.
 </p>
@@ -115,38 +115,45 @@ Specifically, I want to design simple and efficient algorithms and apply them to
 	To the future, I see myself in digging truth and love. Lucky enough, I may find <b>the algorithm</b> to give the birth to a machine.
 </p>
 
-<!-- <p>
-	To whom it may concern, 
-</p> -->
 
-<!-- <h2><a id="news" ><font color="#CB4335">🔥 Recent News</font></a></h2> -->
+<h2><a id="news" ><font color="#CB4335">🔥 Recent News</font></a></h2>
 
-<!--<ul><div style="height:200px; width:fit-content; overflow:auto; background:#FFFFFF;">-->
-<!-- <ul><div style="height:150x; width:fit-content; overflow:auto; background:#FFFFFF;">
-	
+<!-- <ul><div style="height:200px; width:fit-content; overflow:auto; background:#FFFFFF;"> -->
+<ul style="height:250px; width:fit-content; overflow-y:auto; background:#FFFFFF">
+    <li>
+        <p>[08/2025] I will serve as the Program Committee of AAAI 2026. </p>
+    </li>
 	<li>
-		<p>[09/2023] One paper submmited to ICLR 2024. </p>
-	</li>
+        <p>[08/2025] One paper on unsupervised representation learning is submitted to AAAI 2026. </p>
+    </li>
+    <li>
+        <p>[05/2025] I will serve as the Reviewer of NeurIPS 2025. </p>
+    </li>
 	<li>
-		<p>[08/2023] I will join CUHK as a research assistant this year. </p>
-	</li>
-	<li>
-		<p>[07/2023] I will searve as the reviewer of ICML Workshop 2023. </p>
-	</li>
-	<li>
-		<p>[06/2023] One paper has been accepted by ICCV 2023. </p>
-	</li>
-	<li>
-		<p>[04/2023] The code for <a href="https://github.com/MrGiovanni/SyntheticTumors">synthetic tumor</a> is released. </p>
-	</li>
-	<li>
-		<p>[03/2023] One paper has been accepted by CVPR 2023.
-	</li>
-	<li>
-		<p>[10/2022] One paper accepted by Medical Meets NeurIPS 2022.
-	</li>
-
-</div></ul> -->
+        <p>[03/2025] I will serve as the Reviewer of APSIPA Transactions on Signal and Information Processing. </p>
+    </li>
+    <li>
+        <p>[12/2024] One paper is accepted by Generative Machine Learning Models in Medical Image Computing. </p>
+    </li>
+    <li>
+        <p>[08/2024] Awarded <a href="https://graduateschool.usc.edu/fellowships/">Viterbi Fellowship</a>. </p>
+    </li>
+    <li>
+        <p>[06/2024] One paper on multi-organ trauma detection via vision-language model is accepted by MICCAI 2024. </p>
+    </li>
+    <li>
+        <p>[07/2023] I will serve as the Reviewer of ICML Workshop 2023. </p>
+    </li>
+    <li>
+        <p>[06/2023] One paper on 3D animal datasets has been accepted by ICCV 2023. </p>
+    </li>
+    <li>
+        <p>[04/2023] The code for <a href="https://github.com/MrGiovanni/SyntheticTumors">synthetic tumor</a> is released. </p>
+    </li>
+    <li>
+        <p>[03/2023] One paper on label-free liver tumor segmentationhas been accepted by CVPR 2023.
+    </li>
+</ul>
 
 
 <!-- <a href="pub.html">[Full List]</a> -->
