--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 
 
-<h2><a id="C1" ><font color="#CB4335">About Me</font></a></h2>
+<h2><a id="C1" ><font color="#CB4335">🧑‍🎓 About Me</font></a></h2>
 
 <!-- <p> 
 	<a href="http://www.cuhk.edu.hk/" target="_blank">
@@ -425,7 +425,7 @@ Specifically, I want to design simple and efficient learning algorithms and appl
 <h2><font color="#CB4335">🏅 Honors and Awards</font></h2>
 <ul>
 	<li>
-		2024.05 USC Viterbi School of Engineering/Graduate School Fellowship.
+		2024.08 USC Viterbi School of Engineering/Graduate School Fellowship.
 	</li>
 	<li>
 		2022.10 First Class Zhixing Outstanding Student Scholarship.
