update the about

--- a/index.html
+++ b/index.html
@@ -75,18 +75,10 @@
 <h2><a id="C1" ><font color="#CB4335">🧑‍🎓 About Me</font></a></h2>
 
 <p>
-	Hi, my name is Qixin Hu (胡琪鑫). If you can't read Pinyin, you can pronounce it as "Chee-sheen Who." Hopefully, I will become Dr. Who someday; that would make it much easier to pronounce.
-</p>
-
-<p>
-	For now, I am a second-year Ph.D. student at USC, working with <b>Prof. <a href="https://viterbi.usc.edu/directory/faculty/Kuo/Chung-Chieh">C.-C. Jay Kuo</a></b>.  I am a recipient of the <b><a href="https://graduateschool.usc.edu/fellowships/">Viterbi Fellowship</a></b>. My research here lie broadly in representation learning, generative AI and foundation models. 
-Specifically, I want to design simple and efficient learning algorithms and apply them to real-world applications.
-<p>
-	In the past, I worked on computer vision, deep learning and medical image analysis. I am very fortunate to had opportunities to collaborate with <b>Prof. <a href="https://www.cse.cuhk.edu.hk/~qdou/">Qi Dou</a> </b>, <b>Dr. <a href="https://www.zongweiz.com/">Zongwei Zhou</a></b>, <b>Prof. <a href="https://www.cs.jhu.edu/~ayuille/">Alan Yuille</a></b>, and <b>Prof.<a href="https://xwcv.github.io/"> Xinggang Wang</a></b>. They are really nice people and I enjoy the time working with them.
-</p>
-<p>
-	To the future, I see myself in digging truth and love. Lucky enough, I may find <b>the algorithm</b> to give the birth to a machine.
-</p>
+	Hi, my name is Qixin Hu (胡琪鑫). If you can't read Pinyin, you can pronounce it as "Chee-sheen Who." I am a second-year Ph.D. student at USC, working with <b>Prof. <a href="https://viterbi.usc.edu/directory/faculty/Kuo/Chung-Chieh">C.-C. Jay Kuo</a></b>.  
+	My research here lies broadly in representation learning, generative AI, and foundation models. Specifically, I want to design simple and efficient learning algorithms and apply them to real-world applications. In the past, I worked on computer vision, deep learning and medical image analysis. 
+	I am very fortunate to have had opportunities to collaborate with <b>Prof. <a href="https://www.cse.cuhk.edu.hk/~qdou/">Qi Dou</a> </b>, <b>Prof. <a href="https://www.cs.jhu.edu/~ayuille/">Alan Yuille</a></b>, and <b>Prof.<a href="https://xwcv.github.io/"> Xinggang Wang</a></b>.
+	I am a recipient of the <b><a href="https://graduateschool.usc.edu/fellowships/">Viterbi Fellowship</a></b>. 
 
 
 <h2><a id="news" ><font color="#CB4335">🔥 Recent News</font></a></h2>
