update the profile

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 </tr>
 
 <!-- Beijing, China (2021/06 - 2021/09)</h4> -->
-<tr>
+<!-- <tr>
 	<td width="800">
 		<h4><a href="https://www.sist.tsinghua.edu.cn/sisten/" target="_blank" rel="external">
 			Department of Automation, Tsinghua Univeristy </a><br></h4>
@@ -329,6 +329,24 @@
 	<td>
 
 		<img src="./assets/images/logo/thu.png" height="100px">
+	</td>
+</tr> -->
+
+<tr>
+	<td width="800">
+		<h4><a href="http://english.phys.hust.edu.cn/" target="_blank" rel="external">
+			School of Electronic Information and Communications, HUST </a><br></h4>
+		<ul>
+			<li style="line-height:1.5;">Position: Research Intern <br> 
+			<li>Supervisor: 
+				Prof. <a href="https://xwcv.github.io/" target="_blank" rel="external">
+					Xinggang Wang</a>
+			<li style="line-height:1.5;">Project: Non-line-of-sight object detection<br></li>
+		</ul>
+	</td>
+	<td>
+
+		<img src="./assets/images/logo/hust.jpeg" height="100px">
 	</td>
 </tr>
 
@@ -358,7 +376,7 @@
 <h2><a id="edu" ><font color="#CB4335">📖 Education</font></a></h2>
 
 <table><tbody>
-
+2
 <tr>
 	<td width="800">
 		<h4> 
