--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
 			Email:<a href="mailto:qixinhu@usc@edu">qixinhu [at] usc [dot] edu</a> 
 		</p>
 		<p>
-			<!-- <a href="https://scholar.google.com/citations?user=EqD5GP8AAAAJ&hl=zh-CN&oi=ao" target="_blank">
-				<img src="./assets/pics/google_scholar3.png" height="40px" style="margin-bottom:0px"></a> -->
+			<a href="https://scholar.google.com/citations?user=EqD5GP8AAAAJ&hl=zh-CN&oi=ao" target="_blank">
+				<img src="./assets/pics/google_scholar3.png" height="40px" style="margin-bottom:0px"></a>
 			<!-- <a href="https://github.com/qixinhu11" target="_blank">
 				<img src="./assets/pics/github_s.jpg" height="40px" style="margin-bottom:0px"></a> -->
-			<!-- <a href="https://orcid.org/0000-0002-7374-2000" target="_blank">
-				<img src="./assets/pics/orcid.png" height="40px" style="margin-bottom:0px"></a> -->
+			<a href="https://orcid.org/0000-0002-7374-2000" target="_blank">
+				<img src="./assets/pics/orcid.png" height="40px" style="margin-bottom:0px"></a>
 			<!-- <a href="assets/files/CV_Hu.pdf">
 				<img src="./assets/pics/cv.png" height="40px" style="margin-bottom:0px"></a> -->
 		</p>
@@ -58,7 +58,7 @@
 			<!--<a href="#news"><font size="3" color="#CB4335"><b>[News]</b></font></a>-->
 			<!-- <a href="#news"><font color="#CB4335"><b>[News]</b></font></a> -->
 			<a href="#pub"><font color="#CB4335"><b>[Publications]</b></font></a>
-			<a href="#company"><font color="#CB4335"><b>[Internship Experience]</b></font></a>
+			<!-- <a href="#company"><font color="#CB4335"><b>[Internship Experience]</b></font></a> -->
 			<a href="#exp"><font color="#CB4335"><b>[Research Experience]</b></font></a>
 			<!-- <a href="#edu"><font color="#CB4335"><b>[Education]</b></font></a> -->
 		</p>
@@ -249,7 +249,7 @@
 </table>
 
 
-<h2><a id="company" ><font color="#CB4335">💻 Company Experience</font></a></h2>
+<!-- <h2><a id="company" ><font color="#CB4335">💻 Company Experience</font></a></h2>
 <table style="margin-top:-0.7em;"><tbody>
 <tr>
 	<td width="800">
@@ -263,7 +263,7 @@
 	<td width="100px">
 		<img src="./assets/images/logo/fulgent.png" height="140px" >
 	</td>
-</tr>
+</tr> -->
 
 
 </tbody></table>
