update the about me

--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
 	I am a recipient of the <b><a href="https://graduateschool.usc.edu/fellowships/">Viterbi Fellowship</a></b>. 
 
 
+	<p> <font color="#CB4335"> I am open to collaboration, feel free to reach me out if your're working on related topics.</font></p>
+
 <h2><a id="news" ><font color="#CB4335">🔥 Recent News</font></a></h2>
 
 <!-- <ul><div style="height:200px; width:fit-content; overflow:auto; background:#FFFFFF;"> -->
